force-app/main/default/objects/Order1__c/Order1__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>ORD{000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>