force-app/main/default/objects/Order1__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>