force-app/main/default/objects/Order1__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>