force-app/main/default/objects/Order1__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orthopedic Surgery Kit</fullName>
            </value>
            <value>
                <fullName>Dental Kit</fullName>
            </value>
            <value>
                <fullName>Cardiac Kit</fullName>
            </value>
            <value>
                <fullName>Neurosurgical Kits</fullName>
            </value>
            <value>
                <fullName>General Surgical Kits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>