force-app/main/default/objects/Order1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Doctor__c</columns>
    <columns>Hospital__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>